# spotify.py

./: .flake8  .gitignore  .pylintrc  .readthedocs.yml  .travis.install.sh  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
docs/: Makefile  conf.py  index.rst  make.bat  modules.rst  spotify.rst
docs/source/: api.rst  changelog.rst  conf.py  index.rst  introduction.rst  quickstart.rst
examples/: add_playlist_track.py  album_tracks.py  artist_related_artists.py  artist_top_tracks.py  clear_playlist.py  create_playlist.py  flask.py  get_albums_artists.py  get_track_album_artist_user.py  remove_playlist_track.py  save_album.py  save_track.py  searching.py  track_audio_features_or_analysis.py  user_auth.py  user_playlists.py  user_recently_played.py  user_top_artists_or_tracks.py  using_oauth2.py
examples/artist/: artist_top_tracks.py
examples/playlist/: add_playlist_track.py  create_playlist.py  remove_playlist_track.py
examples/podcasts/: check_saved_shows.py  get_all_episodes.py  get_an_episode.py  get_podcasts.py  remove_saved_shows.py
examples/track/: get_track_album_artist_user.py
examples/user/: user_auth.py  user_playlists.py  user_recently_played.py
spotify/: __init__.py  album.py  artist.py  client.py  errors.py  http.py  library.py  local.py  model.py  oauth.py  playlist.py  state.py  track.py  user.py  utils.py
spotify/models/: __init__.py  album.py  artist.py  base.py  common.py  library.py  player.py  track.py  (+5 more)
tests/: common.py  test_import.py  test_models_artist.py  test_oauth.py
(+5 files in other folders)
