[tool.poetry]
name = "spotify"
version = "0.10.2"
description = "spotify.py is an asynchronous API wrapper for Spotify written in Python."
authors = ["mental <m3nta1@yahoo.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/mental32/spotify.py"
documentation = "https://spotifypy.readthedocs.io/en/latest/"
keywords = ["spotify", "python", "async", "library", "api"]
classifiers=[
  "License :: OSI Approved :: MIT License",
  "Intended Audience :: Developers",
  "Natural Language :: English",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Topic :: Internet",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules",
  "Topic :: Utilities",
]

[tool.poetry.dependencies]
python = "^3.6"
aiohttp = "^3.6"

# [tool.poetry.scripts]
backoff = "^1.10.0"
# spy = "spotify:__main__:console"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
